# Schlange

./: .env.example  README.md  _regen.py  assets_manifest.json  dictionary.md  pyproject.toml
assets/: assets.json
examples/: fehler.schl.py  hello.schl.py  loops.schl.py  spotify_parse.schl.py
game/: schlange.html
schlange/: __init__.py  cli.py  keywords.py  transpile.py  validate.py
schlange/email/: __init__.py  sender.py  template.py
schlange/spotify/: __init__.py  parser.py  playlist.py
schlange/video/: __init__.py  frames.py  script.py  veo3.py
tests/: test_cli.py  test_transpile.py
tools/: diagnose_spotify.py  go.schl.py  make_playlist.schl.py  make_video.schl.py  publish_tom2000.schl.py  reminder.py  tom2000.schl.py
video/: spec.yaml
